--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -16,7 +16,7 @@ social:
 - {icon: 'github',     link: 'https://www.github.com/lenpaul'}
 - {icon: 'twitter',    link: 'https://twitter.com/paululele'}
 - {icon: 'linkedin',   link: 'http://www.linkedin.com/in/lenpaul/'}
-- {icon: 'envelope',   link: 'mailto:l.nguyen.paul@gmail.com'}
+- {icon: 'envelope',   link: 'mailto:ngocdiep140499@gmail.com'}
 - {icon: 'rss-square', link: '/feed.xml'}
 # - {icon: 'rss-square', link: '/rss-feed.xml'}
 
