--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-t
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
 title:		           'Beyond the Margins'
-description:	       #'a minimalist Jekyll theme'
+description:	       'Diep Nguyen'
 author:              'Diep Nguyen'
 
 # RSS 2.0 can be used instead of Atom by uncommenting following two lines
