--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -17,7 +17,7 @@ social:
 #- {icon: 'twitter',    link: 'https://twitter.com/paululele'}
 - {icon: 'linkedin',   link: 'http://www.linkedin.com/in/diep-nguyen-074958160/'}
 - {icon: 'envelope',   link: 'mailto:ngocdiep140499@gmail.com'}
-- {icon: 'rss-square', link: '/feed.xml'}
+#- {icon: 'rss-square', link: '/feed.xml'}
 # - {icon: 'rss-square', link: '/rss-feed.xml'}
 
 # Customize site text
